# pdf-orc

./: .gitignore  README.md  pyproject.toml
docs/: CHANGELOG.md  USAGE-novel.md
samples/: novel_sample.md
src/pdf_ocr/: __init__.py  cli.py  extractors.py  processor.py
src/xnovel/: __init__.py  cli.py  config.py  io.py  paths.py
src/xnovel/graph/: states.py
src/xnovel/llm/: __init__.py  cost.py  providers.py
src/xnovel/novel/: __init__.py  analysis_agent.py  analysis_schema.py  io.py  orchestrator.py  outline_agent.py  providers.py  review_agent.py  state.py  writing_agent.py
tests/: conftest.py  test_analysis_agent.py  test_config.py  test_io.py  test_llm_providers.py  test_outline_agent.py  test_pdf_extractors.py  test_pdf_processor_utils.py  test_review_agent.py
tests/novel/: test_writing_agent.py
