[project]
name = "pdf-ocr-pipeline"
version = "0.1.0"
description = "Standalone PDF OCR to Markdown pipeline with LangGraph and RAG enhancements."
authors = [{ name = "ai-lab" }]
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "numpy>=1.26.0"
]

[project.scripts]
pdf-ocr = "pdf_ocr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_ocr", "src/xnovel"]

[tool.hatch.build.targets.sdist]
include = ["src/pdf_ocr", "src/xnovel", "pyproject.toml", "README.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
